// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute forex endpoint inverse pair should return success 1`] = `
{
  "data": {
    "result": 4.273504273504273,
  },
  "result": 4.273504273504273,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute forex endpoint should return error for invalid quote 1`] = `
{
  "errorMessage": "OpenExchangeRates provided no data for base "ETH" and quote "INVALID"",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute forex endpoint should return success 1`] = `
{
  "data": {
    "result": 4483.820268,
  },
  "result": 4483.820268,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;
